Fix the margin spacing issues on the Careers page

--- a/packages/components/src/Data display/OpenRolesList/index.module.css
+++ b/packages/components/src/Data display/OpenRolesList/index.module.css
@@ -116,6 +116,9 @@
 .jobDescription .mb-0 {
     margin-bottom: 0;
 }
+.mt-0 {
+    margin-top: 0;
+}
 
 .jobDescription .inline-block {
     display: inline-block;
